force-app/main/default/objects/Entity_Role_Mapping__mdt/Entity_Role_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Stores mapping configurations for Entity-to-Role assignments, used by Apex classes and Flows to dynamically determine permissions or routing.</description>
    <label>Entity Role Mapping</label>
    <pluralLabel>Entity Role Mappings</pluralLabel>
</CustomObject>