force-app/main/default/objects/Entity_Role_Mapping__mdt/fields/Entity_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Entity_Field_API__c</fullName>
    <label>Entity Field API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>