force-app/main/default/objects/Entity_Role_Mapping__mdt/fields/Ownership_Percentage_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage_Field_API_Name__c</fullName>
    <label>Ownership Percentage Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>