force-app/main/default/objects/Entity_Role_Mapping__mdt/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <label>Role Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>