force-app/main/default/objects/Entity_Role_Mapping__mdt/fields/State_of_Residence_Field_API__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence_Field_API__c</fullName>
    <label>State of Residence Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>