force-app/main/default/objects/Entity_Role_Mapping__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Entity_Field_API__c</columns>
    <columns>Ownership_Percentage_Field_API_Name__c</columns>
    <columns>State_of_Residence_Field_API__c</columns>
    <columns>Role_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>